fixed property type layout bug on phone

--- a/web/packages/realtor/css/app.css
+++ b/web/packages/realtor/css/app.css
@@ -1106,6 +1106,10 @@ section.search {
       section.search div.property-search .property-types .type input {
         width: 12px;
         height: 12px; }
+      section.search div.property-search .property-types .type input[type=checkbox] {
+        margin: 0 3px 5px 0;
+        vertical-align: -5px;
+        padding: 12px !important; }
       section.search div.property-search .buttons a.clearfields {
         margin-top: 10px; } }
 
